styling the movie-section

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -17,3 +17,7 @@ $base-font: 'Montserrat', sans-serif;
 
 // Shadows
 $header-shadow: 5px 5px 15px rgba(0,0,0,.7);
+$shadow-1: 15px 15px 20px rgba(0,0,0,.7);
+
+// sources
+$movie-source: url(https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg);
