--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,8 @@
 @import './base/reset';
 @import './base/typography';
 @import './layout/header';
+@import './layout/movie';
+
 
 
 /* google fonts */
