--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -27,29 +27,36 @@
 
     .movie__info {
         position: relative;
-        
-        .type {
-            margin-left: 63vw;
-            margin-top: 1rem;
-            font-size: 1.3rem;
-        }
+        background: linear-gradient(to top,rgba(0, 173, 181, .4), rgba(40, 223, 153, .8), rgba(71, 0, 216, .5));
+        height: 25vh;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, .45);
 
         .movie__title {
-            position: absolute;
-            transform: translate(15%, 10%) skewY(-6deg);
-            left: 40%;
-            top: 5%;
+            
+
+            .type {
+                    margin-left: 10vw;
+                margin-top: 1rem;
+                font-size: 1.3rem;
+            }
             
             h2 {
-                background-image: linear-gradient(to bottom,rgba(0, 173, 181, .4), rgba(0, 173, 181, .7));
+                // background-image: linear-gradient(to bottom,rgba(0, 173, 181, .4), rgba(0, 173, 181, .7));
+                background-color: rgba(255, 255, 255, .25);
+                border: 1px solid rgba(255, 255, 255, .25);
                 padding: 1.3rem 2rem;
                 box-decoration-break: clone;
-                max-width: 100%;
+                max-width: 50%;
                 font-size: 3rem;
                 color: $color-base-hex;
                 text-shadow: 2px 2px 1px rgba(0,0,0,.7);
-                box-shadow: 10px 10px 20px rgba(0,0,0,.7);
+                box-shadow: 0 0 10px 1px rgba(0, 0, 0, .45);
                 border-radius: .5rem;
+                text-align: center;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%) skewY(-6deg);
             }
         }
     }
@@ -61,7 +68,9 @@
 
     .movie__wrapper--1 {
         margin-top: 20rem;
-
+        box-shadow: 0 2px 2px rgba(0, 0, 0, .45);
+        padding: .5rem 0;
+        font-size: 1.4rem;
         
         .movie__genre {
             ul {
@@ -74,10 +83,10 @@
     }
     
     .movie__wrapper--2 {
-        margin-top: 15rem;
+        margin-top: 10rem;
         flex-direction: column;
         align-items: center;
-
+        
         .movie__actors ul {
             // display: flex;
 
@@ -85,10 +94,20 @@
                 padding: 0 1rem; 
             }
         }
+
+        .movie__description {
+            font-size: 1.9rem;
+            width: 80%;
+            margin-left: 10%;
+        }
+
+        .movie__director {
+            padding: 5rem 0;
+        }
     }
 
     .movie__wrapper--3 {
-        margin-top: 15rem;
+        margin-top: 12rem;
         flex-direction: row;
 
         .movie__ratings {
@@ -99,7 +118,4 @@
             }
         }
     }
-
-
-
 }
