--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,11 @@
 @import './abstracts/variables';
 @import './abstracts/mixins';
+@import './abstracts/helpers';
 @import './base/reset';
 @import './base/typography';
 @import './layout/header';
 @import './layout/movie';
+
 
 
 
