--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -22,3 +22,9 @@ $base-font: 'Montserrat', sans-serif;
 // Shadows
 $header-shadow: 5px 5px 15px rgba(0,0,0,.7);
 $shadow-1: 15px 15px 20px rgba(0,0,0,.7);
+
+// Breakpoints
+$bp-large: 78.15em; // 1250px
+$bp-medium: 61.25em; // 980px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px
