--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import './layout/movie';
 
 
-
+// TODO: change the import url to a @font-face for opmitization purposes
 /* google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;1,300;1,400&display=swap');
 
