--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -1,44 +1,79 @@
 .section__movie {
-    height: 0vh;
+    height: 100vh;
     display: flex;
-    flex-direction: row;
+    background-color: $color-base-hex;
+    overflow-x: hidden;
+
+    @media only screen and (min-width: $bp-smallest) {
+        flex-direction: column;
+    }
+
+    @media only screen and (min-width: $bp-medium-small) {
+        flex-direction: row;
+    }
 
     .movie__poster {
-        // background: $movie-gradient;
-        background-size: cover;
-        width: 30%;
-        position: relative;
-        box-shadow: 5px 0px 10px black;
+        z-index: 10;
+
+        @media only screen and (min-width: $bp-smallest) {
+            display: none;
+        }
+
+        @media only screen and (min-width: $bp-medium-small) {
+            background: $movie-gradient;
+            background-size: cover;
+            width: 33%;
+            position: relative;
+            box-shadow: 5px 0px 10px black;
+            display: block;
+        }
 
         img {
-            margin: 6rem 3.5rem;
-            box-shadow: $shadow-1;
-            border-radius: 10px;
-            width: 80%;
-            height: 80%;
-
-            @media only screen and (max-width: $bp-medium) {
-                height: 60%;
-                margin: 14rem 2.5rem;
+            @media only screen and (min-width: $bp-smallest) {
+                display: none;
             }
+
+            @media only screen and (min-width: $bp-medium-small) {
+                margin: 25% 2.5rem;
+                box-shadow: $shadow-1;
+                border-radius: 10px;
+                width: 85%;
+                height: 70%;
+                display: block;
+            }
+
+            // @media only screen and (max-width: $bp-medium) {
+            //     height: 60%;
+            //     margin: 14rem 2.5rem;
+            // }
         }
 
-        @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-            .movie__poster {
-                -webkit-backdrop-filter: blur(10px);
-                backdrop-filter: blur(10px);
-                background-color: rgba(255, 255, 255, 0.5);
-            }
-        }
+        // @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+        //     .movie__poster {
+        //         -webkit-backdrop-filter: blur(10px);
+        //         backdrop-filter: blur(10px);
+        //         background-color: rgba(255, 255, 255, 0.5);
+        //     }
+        // }
     }
 
     .movie__info {
         position: relative;
-        background: linear-gradient(to top,rgba(0, 0, 0, .7), rgba(0, 0, 0, .6), rgba(0, 0, 0, .5));
+        // background: linear-gradient(to top,rgba(0, 0, 0, .7), rgba(0, 0, 0, .6), rgba(0, 0, 0, .5));
+        box-shadow: 5px 0 10px rgba(0, 0, 0, .45);
         // height: 20vh;
         height: 15vh;
-        width: 70vw;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, .45);
+        background-color: $color-base-hex;
+        z-index: 1;
+
+        @media only screen and (min-width: $bp-smallest) {
+            width: 100vw;
+        }
+
+        @media only screen and (min-width: $bp-medium-small) {
+            width: 67vw;
+        }
+
 
         .movie__title {
             
@@ -49,16 +84,17 @@
             // }
             
             h2 {
-                // background-image: linear-gradient(to bottom,rgba(0, 173, 181, .4), rgba(0, 173, 181, .7));
-                background-color: rgba(255, 255, 255, .25);
-                border: 1px solid rgba(255, 255, 255, .25);
+                background-image: linear-gradient(to right,aqua , blueviolet);
+                background-clip: text;
+                // background-color: rgba(255, 255, 255, .25);
+                // border: 1px solid rgba(255, 255, 255, .25);
                 padding: 1.3rem 2rem;
                 box-decoration-break: clone;
-                max-width: 50%;
+                width: 100%;
                 font-size: 3rem;
-                color: $color-base-hex;
-                text-shadow: 2px 2px 1px rgba(0,0,0,.7);
-                box-shadow: 0 0 10px 1px rgba(0, 0, 0, .45);
+                color: transparent;
+                // text-shadow: 2px 2px 1px rgba(0,0,0,.7);
+                // box-shadow: 0 0 10px 1px rgba(0, 0, 0, .45);
                 border-radius: .5rem;
                 text-align: center;
                 position: absolute;
@@ -67,10 +103,20 @@
                 // transform: translate(-50%, -50%) skewY(-6deg);
                 transform: translate(-50%, -50%);
 
-                @media only screen and (max-width: $bp-medium) {
-                    padding: .6rem 2rem;
-                    font-size: 2.8rem;
+
+                @media only screen and (min-width: $bp-smallest) {
+                    padding: 0.8rem 2rem;
+                    font-size: 3.2rem;
                 }
+
+                @media only screen and (min-width: $bp-medium-small) {
+                    font-size: 4.2rem;
+                }
+
+                // @media only screen and (max-width: $bp-medium) {
+                //     padding: .6rem 2rem;
+                //     font-size: 2.8rem;
+                // }
             }
         }
     }
@@ -78,6 +124,7 @@
     .movie__wrapper {
         display: flex;
         justify-content: space-around;
+        background-color: $color-base-hex;
     }
 
     .movie__wrapper--1 {
@@ -85,6 +132,18 @@
         box-shadow: 0 2px 2px rgba(0, 0, 0, .45);
         padding: .5rem 0;
         font-size: 1.4rem;
+        background-color: $color-base-hex;
+        z-index: 1;
+        
+        
+        @media only screen and (min-width: $bp-smallest) {
+            padding: 1.5rem 0;
+            font-size: 1.1rem;
+        }
+
+        @media only screen and (min-width: $bp-medium-small) {
+            margin-top: 10rem;
+        }
         
         .movie__country {
 
@@ -108,12 +167,21 @@
         margin-top: 4rem;
         flex-direction: column;
         align-items: center;
-        
+
+        @media only screen and (min-width: $bp-medium-small) {
+            margin-top: 2rem;
+        }
+
         .movie__actors ul {
             // display: flex;
             overflow-x: scroll;
-            width: 25%;
+            width: 20%;
             margin: 0 auto;
+            padding: 2rem 0;
+
+            // @media only screen and (min-width: $bp-smallest) {
+            //     // width: 50%;
+            // }
 
             li {
                 padding: 0 1rem; 
@@ -135,6 +203,10 @@
                 font-weight: 400;
                 padding: 1rem 0;
                 text-align: center;
+
+                @media only screen and (min-width: $bp-medium-small) {
+                    font-size: 2rem;
+                }
             }
 
             p {
@@ -144,13 +216,22 @@
         }
 
         .movie__director {
-            padding: 5rem 0;
+            padding: 2rem 0;
+            font-size: 1.5rem;
         }
     }
 
     .movie__wrapper--3 {
         margin-top: 2rem;
-        flex-direction: row;
+        
+        @media only screen and (min-width: $bp-smallest) {
+            flex-direction: column;
+            align-items: center;
+        }
+        
+        @media only screen and (min-width: $bp-medium-small) {
+            flex-direction: row;
+        }
 
         .movie__ratings {
             ul {
