finishing the movie feature of the project

--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -1,8 +1,9 @@
 .section__movie {
-    height: 100vh;
+    height: 0vh;
     display: flex;
     background-color: $color-base-hex;
-    overflow-x: hidden;
+    overflow: hidden;
+
 
     @media only screen and (min-width: $bp-smallest) {
         flex-direction: column;
